<resources>
    <string name="app_name">FYP2024</string>
    <string name="front_title">Amusement Park App</string>
    <string name="front_describe">Have fun every day.</string>
    <string name="front_startBtn">Join</string>
    <string name="email"> EMAIL</string>
    <string name="password"> PASSWORD</string>
    <string name="phone"> PHONE</string>
    <string name="name"> NAME</string>

    <string name="loginBtn">Log in</string>
    <string name="registerBtn">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="updateBtn">Update</string>
    <string name="backBtn">Back</string>


    <string name="option_text">You want to:</string>
    <string name="update_userBtn">Update User</string>
    <string name="logoutBtn">Logout</string>
    <string name="view_bookingBtn">Schedule</string>
    <string name="go_to_bookingBtn">Book Raids</string>
    <string name="map_locationBtn">Location</string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">No</string>
    <string name="ticketBtn">Buy Ticket</string>


    <string name="facilitName_text">facilitName</string>

    <string name="map_text">Map Location</string>

    <string name="QR_Code_text">QR Code Verification</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>