<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6B00"
    tools:context=".Login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FF6B00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF6B00"
            android:padding="4dp">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="#FBD472"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />



            <ImageView
                android:id="@+id/Title_image_login"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:radius="12dp"
                app:layout_constraintEnd_toEndOf="@+id/header_image"
                app:layout_constraintStart_toStartOf="@+id/header_image"
                app:layout_constraintTop_toTopOf="@+id/header_image"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/app_title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/front_title"
                app:layout_constraintEnd_toEndOf="@+id/header_image"
                app:layout_constraintStart_toStartOf="@+id/header_image"
                app:layout_constraintTop_toBottomOf="@+id/Title_image_login" />

            <TextView
                android:id="@+id/Login_email_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/Login_email_Input"
                app:layout_constraintTop_toBottomOf="@+id/app_title_login" />

            <EditText
                android:id="@+id/Login_password_Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/header_image"
                app:layout_constraintStart_toStartOf="@+id/header_image"
                app:layout_constraintTop_toBottomOf="@+id/Login_password_Text" />

            <EditText
                android:id="@+id/Login_email_Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/header_image"
                app:layout_constraintStart_toStartOf="@+id/header_image"
                app:layout_constraintTop_toBottomOf="@+id/Login_email_Text" />

            <TextView
                android:id="@+id/Login_password_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/Login_password_Input"
                app:layout_constraintTop_toBottomOf="@+id/Login_email_Input" />

            <Button
                android:id="@+id/Login_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:onClick="Login"
                android:text="@string/loginBtn"
                android:textColor="#FFFFFF"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="@+id/Login_password_Input"
                app:layout_constraintStart_toStartOf="@+id/Login_password_Input"
                app:layout_constraintTop_toBottomOf="@+id/Login_password_Input" />

            <TextView
                android:id="@+id/Login_login_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Need an account?"
                app:layout_constraintEnd_toEndOf="@+id/header_image"
                app:layout_constraintStart_toStartOf="@+id/header_image"
                app:layout_constraintTop_toBottomOf="@+id/Login_button" />

            <Button
                android:id="@+id/Goto_Register_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:onClick="Go_to_Register"
                android:text="@string/registerBtn"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="@+id/Login_button"
                app:layout_constraintStart_toStartOf="@+id/Login_button"
                app:layout_constraintTop_toBottomOf="@+id/Login_login_describe" />

            <Button
                android:id="@+id/User_ClientBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:onClick="StaffClient"
                android:text="Staff Client"
                app:layout_constraintBottom_toBottomOf="@+id/header_image"
                app:layout_constraintEnd_toEndOf="@+id/Goto_Register_button"
                app:layout_constraintStart_toStartOf="@+id/Goto_Register_button"
                app:layout_constraintTop_toBottomOf="@+id/Goto_Register_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>